--- a/resources/views/layouts/aaaaa.html
+++ b/resources/views/layouts/aaaaa.html
@@ -1,80 +1,145 @@
-@extends('layouts/master',['title'=>"S'inscrire"])
+@extends('layouts/master',['title'=>'Expérience professionnelle'])
 
 @section('content')
-<div style="background-color:#737491;">
-    <main class="page-wrapper d-flex flex-column">
-        <!-- Navbar (Floating dark)-->
+
+<div style="background-color:#f7f7fc;">
+
+    <main class="page-wrapper">
+        <!-- Navbar (Floating light)-->
         @include('layouts/_navbar')
         <!-- Page content-->
-        <section class="container d-flex justify-content-center align-items-center pt-7 pb-4" style="flex: 1 0 auto;">
-            <div class="signin-form mt-3">
-                <div class="signin-form-inner">
-                    <!-- Sign up view-->
-                    <div class="view show">
-                        <h1 class="h2 text-center">S'inscrire</h1>
-                        <p class="fs-ms text-muted mb-4 text-center">L'inscription prend moins d'une minute mais vous
-                            donne un contrôle total sur vos commandes.</p>
-                        <form class="needs-validation" action="{{route('register')}}" method="post">
-                            @if(Session::get('success'))
-                            <div class="alert alert-success">
-                                {{Session::get('success')}}
+        <!-- Slanted background-->
+        <div class="position-relative bg-gradient" style="height: 480px;">
+            <div class="shape shape-bottom shape-slant bg-secondary d-none d-lg-block">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3000 260">
+                    <polygon fill="currentColor" points="0,257 0,260 3000,260 3000,0"></polygon>
+                </svg>
+            </div>
+        </div>
+        <!-- Page content-->
+        <div class="container position-relative zindex-5 pb-4 mb-md-3" style="margin-top: -350px;">
+            <div class="row">
+                @include('layouts\_sidebar')
+                <!-- Content-->
+                <div class="col-lg-8">
+                    <div class="d-flex flex-column h-100 bg-light rounded-3 shadow-lg p-4">
+                        <div class="py-2 p-md-3">
+                            <!-- Title + Delete link-->
+                            <div
+                                class="d-sm-flex align-items-center justify-content-between pb-4 text-center text-sm-start">
+                                <h1 class="h3 mb-2 text-nowrap">Profile info</h1>
                             </div>
-                            @endif
-                            @if(Session::get('fail'))
-                            <div class="alert alert-danger">
-                                {{Session::get('fail')}}
-                            </div>
-                            @endif
-                            @csrf
-                            <div class="mb-3">
-                                <input class="form-control" type="text" placeholder="Nom Complet" name="name"
-                                    value="{{old('name')}}">
-                                <span class="text-danger">@error('name'){{$message}} @enderror</span>
-                            </div>
-                            <div class="mb-3">
-                                <input class="form-control" type="email" placeholder="Email" name="email"
-                                    value="{{old('email')}}">
-                                <span class="text-danger">@error('email'){{$message}} @enderror</span>
-                            </div>
-                            <div class="input-group mb-3">
-                                <div class="password-toggle w-100">
-                                    <input class="form-control" type="password" name="password"
-                                        placeholder="Mot de pass">
-                                    <label class="password-toggle-btn" aria-label="Show/hide password">
-                                        <input class="password-toggle-check" type="checkbox"><span
-                                            class="password-toggle-indicator"></span>
-                                    </label>
+                            <!-- Content-->
+                            <div class="bg-secondary rounded-3 p-4 mb-4">
+                                <div class="d-block d-sm-flex align-items-center"><img
+                                        class="d-block rounded-circle mx-sm-0 mx-auto mb-3 mb-sm-0"
+                                        src="img/dashboard/avatar/main.jpg" alt="Amanda Wilson" width="110">
+                                    <div class="ps-sm-3 text-center text-sm-start">
+                                        <div class="p mb-0 fs-ms text-muted fw-bolder">Hello Amanda Wilson.</div>
+                                    </div>
                                 </div>
-                                <span class="text-danger">@error('password'){{$message}} @enderror</span>
                             </div>
-                            <div class="input-group mb-3">
-                                <div class="password-toggle w-100">
-                                    <input class="form-control" type="password" name="confirm_password"
-                                        placeholder="Confirmez le mot de pass">
-                                    <label class="password-toggle-btn" aria-label="Show/hide password">
-                                        <input class="password-toggle-check" type="checkbox"><span
-                                            class="password-toggle-indicator"></span>
-                                    </label>
+                            <form action="">
+                                <div class="row">
+                                    <h3
+                                        class="d-block bg-secondary fs-sm fw-semibold text-muted mb-0 px-4 py-3 text-md-center mb-2">
+                                        Expérience professionnelle
+                                    </h3>
+                                    <div class="col-sm-12">
+                                        <div class="mb-3 pb-1">
+                                            <label class="form-label px-0" for="account-fn">Fonction ou poste
+                                                occupé(e)<sup class="text-danger ms-1">*</sup></label>
+                                            <input class="form-control" type="text" id="account-fn">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <div class="mb-3 pb-1">
+                                            <label class="form-label px-0" for="account-ln">Employeur</label>
+                                            <input class="form-control" type="text" id="account-ln">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="mb-3 pb-1">
+                                            <label class="form-label px-0" for="account-address">Localité</label>
+                                            <input class="form-control" type="text" id="account-address"
+                                                value="Madagascar">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="mb-3 pb-1">
+                                            <label class="form-label px-0" for="account-country">Pays</label>
+                                            <select class="form-select" id="account-country">
+                                                <option value>Sélectioner pays</option>
+                                                <option value="Argentina">Cameroun</option>
+                                                <option value="Belgium">Belgium</option>
+                                                <option value="France">France</option>
+                                                <option value="Germany">Germany</option>
+                                                <option value="Madagascar">Madagascar</option>
+                                                <option value="Spain">Spain</option>
+                                                <option value="UK">United Kingdom</option>
+                                                <option value="USA">USA</option>
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-sm-6">
+                                        <div class="mb-3 pb-1">
+                                            <label class="form-label px-0" for="date">De</label>
+                                            <input class="form-control" type="date" id="date" value="21/202/1999">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div class="mb-3 pb-1">
+                                            <label class="form-label px-0" for="date">Au</label>
+                                            <input class="form-control" type="date" id="date" value="21/202/1999">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <div class="mb-3 pb-1">
+                                            <label class="form-label" for="cont-message">Principales activités et
+                                                responsabilités</label>
+                                            <textarea class="form-control" id="cont-message" rows="5"
+                                                required></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <hr class="mt-2 mb-4">
+                                        <div class="d-flex flex-wrap justify-content-end align-items-center">
+                                            <button class="btn btn-primary mt-3 mt-sm-0" type="button"><i
+                                                    class="ai-save fs-lg me-2"></i>Enregistrer</button>
+                                        </div>
+                                    </div>
                                 </div>
-                                <span class="text-danger">@error('confirm_password'){{$message}} @enderror</span>
+                            </form>
+                            <div class="table-responsive fs-md mt-5">
+                                <table class="table table-hover mb-0">
+                                    <tbody>
+                                        <tr>
+                                            <td class="py-3 align-middle">
+                                                <p class="fw-bold">Amanda Wilson</p>
+                                                <span class="fw-bold">Alshado Technologies, Yaounde-Cameroun</span>
+                                                <p>Amanda Wilson Lorem ipsum dolor sit amet consectetur adipisicing
+                                                    elit. Et, pariatur, tempora id aspernatur officia odio assumenda at,
+                                                    obcaecati minima non voluptatum autem quis facere alias aperiam quia
+                                                    consequuntur quasi doloremque. Quo provident esse natus vel deserunt
+                                                    vitae, nostrum distinctio sed sapiente pariatur eligendi odio error,
+                                                    commodi ratione temporibus mollitia repudiandae.</p>
+                                            </td>
+                                            <td class="py-3 align-middle">08/02/2023-21/02/2009</td>
+                                            <td class="py-3 align-middle"><a class="nav-link-style text-danger" href="#"
+                                                    data-bs-toggle="tooltip" title="Remove">
+                                                    <div class="ai-trash-2"></div>
+                                                </a></td>
+                                        </tr>
+
+                                    </tbody>
+                                </table>
                             </div>
-                            <button class="btn btn-primary d-block w-100" type="submit">S'inscrire</button>
-                            <p class="fs-sm pt-3 mb-0 text-center">Avez-vous déjà un compte ? <a
-                                    href="{{route('login')}}" class='fw-medium'>Connexion</a></p>
-                        </form>
-                    </div>
-                    <div class="border-top text-center mt-4 pt-4">
-                        <p class="fs-sm fw-medium text-heading">Ou connectez vous avec</p><a
-                            class="btn-social bs-facebook bs-outline bs-lg mx-1 mb-2" href="#"><i
-                                class="ai-facebook"></i></a><a class="btn-social bs-twitter bs-outline bs-lg mx-1 mb-2"
-                            href="#"><i class="ai-twitter"></i></a><a
-                            class="btn-social bs-instagram bs-outline bs-lg mx-1 mb-2" href="#"><i
-                                class="ai-instagram"></i></a><a class="btn-social bs-google bs-outline bs-lg mx-1 mb-2"
-                            href="#"><i class="ai-google"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </main>
 </div>
 @endsection
